feat: layout creation

--- a/index.html
+++ b/index.html
@@ -3,19 +3,96 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="./js/main.js" defer></script>
     <title>Image gallery</title>
 </head>
 <body>
     <header class="header">
+        <div class="container">
+            <div class="header__content">
+                <div class="logo">
+                    <img src="./images/logo/camera.png" alt="Logo" class="logo__img">
+                    <p class="logo__text">Unsplash API</p>
+                </div>
 
+                <div class="search">
+                    <input type="text" class="search__input" placeholder="Enter search">
+                    <button class="search__btn">
+                        <img src="./images/search/search.png" alt="Loupe" class="search__img">
+                    </button>
+                </div>
+            </div>
+        </div>
     </header>
 
     <main class="main">
-
+        <section class="image">
+            <div class="container">
+                <div class="image__content">
+                    <div class="image__box">
+                        <img src="./images/test/test.jpg" alt="" class="image__box-img">
+                    </div>
+                    <div class="image__box">
+                        <img src="./images/test/test.jpg" alt="" class="image__box-img">
+                    </div>
+                    <div class="image__box">
+                        <img src="./images/test/test.jpg" alt="" class="image__box-img">
+                    </div>
+                    <div class="image__box">
+                        <img src="./images/test/test.jpg" alt="" class="image__box-img">
+                    </div>
+                    <div class="image__box">
+                        <img src="./images/test/test.jpg" alt="" class="image__box-img">
+                    </div>
+                    <div class="image__box">
+                        <img src="./images/test/test.jpg" alt="" class="image__box-img">
+                    </div>
+                    <div class="image__box">
+                        <img src="./images/test/test.jpg" alt="" class="image__box-img">
+                    </div>
+                    <div class="image__box">
+                        <img src="./images/test/test.jpg" alt="" class="image__box-img">
+                    </div>
+                    <div class="image__box">
+                        <img src="./images/test/test.jpg" alt="" class="image__box-img">
+                    </div>
+                    <div class="image__box">
+                        <img src="./images/test/test.jpg" alt="" class="image__box-img">
+                    </div>
+                    <div class="image__box">
+                        <img src="./images/test/test.jpg" alt="" class="image__box-img">
+                    </div>
+                    <div class="image__box">
+                        <img src="./images/test/test.jpg" alt="" class="image__box-img">
+                    </div>
+                    <div class="image__box">
+                        <img src="./images/test/test.jpg" alt="" class="image__box-img">
+                    </div>
+                    <div class="image__box">
+                        <img src="./images/test/test.jpg" alt="" class="image__box-img">
+                    </div>
+                    <div class="image__box">
+                        <img src="./images/test/test.jpg" alt="" class="image__box-img">
+                    </div>
+                    <div class="image__box">
+                        <img src="./images/test/test.jpg" alt="" class="image__box-img">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer class="footer">
-        
+        <div class="container">
+            <div class="footer__content">
+                <p class="footer__text">2023 <a href="https://github.com/mopjiex" class="footer__link">Github</a></p>
+
+                <a href="https://rs.school/js-stage0/" class="footer__logo">
+                    <img src="./images/footer/logo/rss.svg" alt="RSS logo" class="footer__logo-img">
+                </a>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
