feat: basic functionality implemented

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section class="image">
             <div class="container">
                 <div class="image__content">
-                    <div class="image__box">
+                    <!-- <div class="image__box">
                         <img src="./images/test/test.jpg" alt="" class="image__box-img">
                     </div>
                     <div class="image__box">
@@ -77,7 +77,7 @@
                     </div>
                     <div class="image__box">
                         <img src="./images/test/test.jpg" alt="" class="image__box-img">
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
